--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My React App</title>
     <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/game.css" />
+
     <script type="module" src="/src/main.tsx"></script>
 </head>
 <body>
