Lobby improve and css

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -6,7 +6,7 @@
     <title>My React App</title>
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="/game.css" />
-
+    <link rel="stylesheet" href="/lobby.css" />
     <script type="module" src="/src/main.tsx"></script>
 </head>
 <body>
