--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My React App</title>
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="/game.css" />
-    <link rel="stylesheet" href="/lobby.css" />
-    <script type="module" src="/src/main.tsx"></script>
-</head>
-<body>
-<div id="root"></div>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>My React App</title>
+        <link rel="stylesheet" href="/style.css" />
+        <link rel="stylesheet" href="/game.css" />
+        <!---<link rel="stylesheet" href="/lobby.css" />-->
+        <script type="module" src="/src/main.tsx"></script>
+    </head>
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
