move the css to the right place and fix invite

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>My React App</title>
-        <link rel="stylesheet" href="/style.css" />
-        <link rel="stylesheet" href="/game.css" />
-        <link rel="stylesheet" href="/lobby.css" />
-        <link rel="stylesheet" href="/LobbyRoom.css" />
+        <link rel="stylesheet" href="/style/style.css" />
+        <link rel="stylesheet" href="/style/game.css" />
+        <link rel="stylesheet" href="/style/lobby.css" />
+        <link rel="stylesheet" href="/style/LobbyRoom.css" />
         <script type="module" src="/src/main.tsx"></script>
     </head>
     <body>
